--- a/SDKVideoPlayer/Base.lproj/Home.storyboard
+++ b/SDKVideoPlayer/Base.lproj/Home.storyboard
@@ -101,7 +101,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" placeholder="请输入网址或者关键词" translatesAutoresizingMaskIntoConstraints="NO" id="uA9-CE-Zwk">
-                                <rect key="frame" x="0.0" y="203" width="393" height="44"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="44"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="G0z-4h-eBa"/>
@@ -112,7 +112,7 @@
                                 </connections>
                             </searchBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhL-yO-FiP">
-                                <rect key="frame" x="16" y="257" width="320" height="24"/>
+                                <rect key="frame" x="16" y="157" width="320" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="320" id="G10-3x-7YZ"/>
                                     <constraint firstAttribute="height" constant="24" id="eiY-qF-sGJ"/>
@@ -122,14 +122,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YQQ-Si-YYT">
-                                <rect key="frame" x="8.6666666666666572" y="207" width="376" height="36"/>
+                                <rect key="frame" x="8.6666666666666572" y="107" width="376" height="36"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VVR-QJ-jNG">
-                                <rect key="frame" x="0.0" y="297" width="393" height="42"/>
+                                <rect key="frame" x="0.0" y="197" width="393" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="ZSf-u5-KJ9"/>
                                 </constraints>
@@ -159,7 +159,7 @@
                                 </cells>
                             </collectionView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hyF-zq-sN8">
-                                <rect key="frame" x="0.0" y="384" width="393" height="385"/>
+                                <rect key="frame" x="0.0" y="284" width="393" height="485"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="B44-y0-FiZ">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -194,7 +194,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="68C-MA-bki">
-                                <rect key="frame" x="325" y="208" width="59" height="35"/>
+                                <rect key="frame" x="325" y="108" width="59" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="59" id="DVa-ez-p8z"/>
                                     <constraint firstAttribute="height" constant="35" id="Wq7-ax-Lsi"/>
@@ -202,15 +202,15 @@
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="搜索"/>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="souqiubaicon" translatesAutoresizingMaskIntoConstraints="NO" id="bt0-5r-7rN">
-                                <rect key="frame" x="36.666666666666657" y="99" width="320" height="88"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bt0-5r-7rN">
+                                <rect key="frame" x="36.666666666666657" y="87" width="320" height="0.0"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="88" id="ASR-g9-6So"/>
+                                    <constraint firstAttribute="height" id="ASR-g9-6So"/>
                                     <constraint firstAttribute="width" constant="320" id="vQr-iG-uid"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="isA-Iq-NUu">
-                                <rect key="frame" x="16" y="350" width="320" height="24"/>
+                                <rect key="frame" x="16" y="250" width="320" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="320" id="7mW-ZV-b0x"/>
                                     <constraint firstAttribute="height" constant="24" id="GTT-wy-8ja"/>
@@ -235,7 +235,7 @@
                             <constraint firstItem="hhL-yO-FiP" firstAttribute="top" secondItem="uA9-CE-Zwk" secondAttribute="bottom" constant="10" id="O31-Ow-bJr"/>
                             <constraint firstItem="hhL-yO-FiP" firstAttribute="leading" secondItem="53h-qm-nj3" secondAttribute="leading" constant="16" id="OtW-fN-Cs8"/>
                             <constraint firstItem="53h-qm-nj3" firstAttribute="trailing" secondItem="hyF-zq-sN8" secondAttribute="trailing" id="Q4u-sz-PJE"/>
-                            <constraint firstItem="53h-qm-nj3" firstAttribute="top" secondItem="uA9-CE-Zwk" secondAttribute="top" constant="-100" id="ReV-2B-ieY"/>
+                            <constraint firstItem="53h-qm-nj3" firstAttribute="top" secondItem="uA9-CE-Zwk" secondAttribute="top" id="ReV-2B-ieY"/>
                             <constraint firstItem="hyF-zq-sN8" firstAttribute="leading" secondItem="53h-qm-nj3" secondAttribute="leading" id="ScY-xT-fbn"/>
                             <constraint firstItem="isA-Iq-NUu" firstAttribute="top" secondItem="VVR-QJ-jNG" secondAttribute="bottom" constant="11" id="Wsn-Qh-8HI"/>
                             <constraint firstItem="53h-qm-nj3" firstAttribute="bottom" secondItem="hyF-zq-sN8" secondAttribute="bottom" id="YeA-OX-2Qr"/>
@@ -588,7 +588,6 @@
         <image name="placeholder" width="80" height="60"/>
         <image name="play.circle.fill" catalog="system" width="128" height="123"/>
         <image name="settings1" width="24" height="24"/>
-        <image name="souqiubaicon" width="1000" height="300"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
